--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express-session": "^1.15.1",
     "path": "^0.12.7",
     "pusher": "^1.5.1"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
