--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "cookie-parser": "^1.4.3",
+    "cookie-session": "^1.4.0",
     "express": "^4.14.1",
-    "express-session": "^1.15.1",
     "path": "^0.12.7",
     "pusher": "^1.5.1"
   },
